euphony-dsp/src/snapshots/euphony_dsp__filter__Bandpass.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Bandpass",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 310,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "cutoff",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
    ],
    buffers: [],
    docs: " Bandpass filter.\n",
    fork: None,
}
