euphony-dsp/src/snapshots/euphony_dsp__filter__Bell.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Bell",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 314,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "center",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
        Input {
            name: "gain",
            id: 3,
            trigger: false,
            default: 1.0,
        },
    ],
    buffers: [],
    docs: " Bell filter.\n",
    fork: None,
}
