euphony-dsp/src/snapshots/euphony_dsp__filter__Butterpass.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Butterpass",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 300,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "cutoff",
            id: 1,
            trigger: false,
            default: 440.0,
        },
    ],
    buffers: [],
    docs: " Butterworth lowpass filter (2nd order).\n",
    fork: None,
}
