euphony-dsp/src/snapshots/euphony_dsp__filter__Lowpass.snap
---
source: euphony-dsp/src/filter.rs
expression: node
---
Node {
    name: "Lowpass",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 308,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "cutoff",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
    ],
    docs: " Lowpass filter.\n",
}
