euphony-dsp/src/snapshots/euphony_dsp__filter__Lowpole.snap
---
source: euphony-dsp/src/filter.rs
assertion_line: 34
expression: node
---
Node {
    name: "Lowpole",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 301,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "cutoff",
            id: 1,
            trigger: false,
            default: 440.0,
        },
    ],
    buffers: [],
    docs: " One-pole lowpass filter (1st order).\n",
}
