euphony-dsp/src/snapshots/euphony_dsp__filter__Lowshelf.snap
---
source: euphony-dsp/src/filter.rs
assertion_line: 442
expression: node
---
Node {
    name: "Lowshelf",
    module: [
        "filter",
    ],
    impl_path: "euphony_dsp::filter",
    id: 315,
    inputs: [
        Input {
            name: "signal",
            id: 0,
            trigger: false,
            default: 0.0,
        },
        Input {
            name: "center",
            id: 1,
            trigger: false,
            default: 440.0,
        },
        Input {
            name: "q",
            id: 2,
            trigger: false,
            default: 0.1,
        },
        Input {
            name: "gain",
            id: 3,
            trigger: false,
            default: 1.0,
        },
    ],
    buffers: [],
    docs: " Lowshelf filter.\n",
}
